--- a/package.json
+++ b/package.json
@@ -1,23 +1,52 @@
 {
+	"name": "vite-plugin-vitepress",
+	"license": "ISC",
+	"main": "dist/index.js",
+	"module": "dist/index.mjs",
+	"version": "0.0.0",
+	"keywords": [
+		"vite",
+		"vitepress",
+		"vite-plugin"
+	],
+	"files": [
+		"dist"
+	],
+	"types": "dist/index.d.ts",
+	"exports": {
+		".": {
+			"require": "./dist/index.js",
+			"import": "./dist/index.mjs"
+		},
+		"./theme": {
+			"import": "./dist/theme.mjs",
+			"require": "./dist/theme.js"
+		},
+		"./package.json": "./package.json",
+		"./dist/*": "./dist/*"
+	},
 	"scripts": {
 		"test": "vitest -u",
 		"dev:example": "vite dev example",
 		"build:example": "vite build example",
-		"preview:example": "vite preview example"
+		"preview:example": "vite preview example",
+		"build": "tsup",
+		"release": "bumpp"
 	},
 	"devDependencies": {
-		"vite": "^4.0.3",
-		"@types/node": "^18.11.18",
-		"vitepress": "1.0.0-alpha.34",
-		"typescript": "^4.9.4",
-		"@mistjs/tsconfig-vue": "^0.0.3",
-		"eslint": "^8.31.0",
 		"@mistjs/eslint-config-vue": "^0.0.3",
-		"tsup": "^6.5.0",
-		"vitest": "^0.26.3",
+		"@mistjs/tsconfig-vue": "^0.0.3",
+		"@types/node": "^18.11.18",
 		"@vitejs/plugin-vue": "^4.0.0",
-		"vue": "^3.2.45",
-		"vite-plugin-inspect": "^0.7.12"
+		"bumpp": "^8.2.1",
+		"eslint": "^8.31.0",
+		"tsup": "^6.5.0",
+		"typescript": "^4.9.4",
+		"vite": "^4.0.3",
+		"vite-plugin-inspect": "^0.7.12",
+		"vitepress": "1.0.0-alpha.34",
+		"vitest": "^0.26.3",
+		"vue": "^3.2.45"
 	},
 	"pnpm": {
 		"peerDependencyRules": {
