--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
 		"build:example": "vite build example",
 		"preview:example": "vite preview example",
 		"build": "tsup",
-		"release": "bumpp"
+		"release": "bumpp",
+		"changelog": "changelogen --output CHANGELOG.md"
 	},
 	"devDependencies": {
 		"@mistjs/eslint-config-vue": "^0.0.3",
@@ -39,6 +40,7 @@
 		"@types/node": "^18.11.18",
 		"@vitejs/plugin-vue": "^4.0.0",
 		"bumpp": "^8.2.1",
+		"changelogen": "^0.4.0",
 		"eslint": "^8.31.0",
 		"tsup": "^6.5.0",
 		"typescript": "^4.9.4",
